# spec-driven-dev-pipeline

./: .gitignore  AGENTS.md  README.md  opencode.json  pipeline-config.toml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark-calc-report.md  leaderboard.json  leaderboard.md
docs/: ollama-models-12gb-vram.md
scripts/: generate_leaderboard.py  judge_benchmark.py  run_benchmark.py  run_pipeline.py  telemetry_smoke.py
specs/: TEMPLATE.md  benchmark-calc-spec.md  benchmark-framework-spec.md  clarify-stage-spec.md  few-shot-prompts-spec.md  format-repair-spec.md  hardening-cleanup-plan.md  ollama-adapter-spec.md  otel-tracing-init-spec.md  otel-tracing-spec.md  otel-tracing-wiring-spec.md  paths-shutil-which-spec.md  pipeline-hardening-spec.md  pipeline-improvement-plan-critique.md  pipeline-improvement-plan-spec.md  pipeline-improvements-2026apr-plan.md  smoke-test-spec.md
src/spec_driven_dev_pipeline/: __init__.py  core.py
src/spec_driven_dev_pipeline/benchmark/: __init__.py  judge.py  leaderboard.py  metrics.py  runner.py
src/spec_driven_dev_pipeline/prompts/: clarify.md  implementer.md  reviewer.md  test_writer.md
src/spec_driven_dev_pipeline/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py
src/spec_driven_dev_pipeline/utils/: __init__.py  executables.py  tracing.py
tests/: test_benchmark_framework.py  test_clarify_stage.py  test_executables.py  test_pipeline_core.py  test_pipeline_providers.py  test_pipeline_stages.py  test_pipeline_tracing_wiring.py  test_tracing.py
