[project]
name = "spec-driven-dev-pipeline"
version = "0.1.0"
description = "A provider-agnostic, spec-driven autonomous TDD pipeline."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.1",
    "numpy>=1.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_driven_dev_pipeline"]
